deploy: eb03ef61bcb9e8186ba9eb98fdeea71c45dd6f16

--- a/print.html
+++ b/print.html
@@ -3855,7 +3855,10 @@ stream! {
 <p>Tokio topics 部分包含与编写异步应用程序时出现的各种主题相关的独立文章。</p>
 <p>目前可用的主题文章有：</p>
 <ul>
-<li></li>
+<li><a href="https://m4n5ter.github.io/rust/tokio/bridging_with_sync_code.html">Bridging with sync code</a></li>
+<li><a href="https://m4n5ter.github.io/rust/tokio/graceful_shutdown.html">Graceful Shutdown</a></li>
+<li><a href="https://m4n5ter.github.io/rust/tokio/getting_started_with_tracing.html">Getting started with Tracing</a></li>
+<li><a href="https://m4n5ter.github.io/rust/tokio/next_steps_with_tracing.html">Next steps with Tracing</a></li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <h1 id="bridging-with-sync-code"><a class="header" href="#bridging-with-sync-code">Bridging with sync code</a></h1>
