--- a/rust/tokio/topics.html
+++ b/rust/tokio/topics.html
@@ -177,7 +177,10 @@
 <p>Tokio topics 部分包含与编写异步应用程序时出现的各种主题相关的独立文章。</p>
 <p>目前可用的主题文章有：</p>
 <ul>
-<li></li>
+<li><a href="https://m4n5ter.github.io/rust/tokio/bridging_with_sync_code.html">Bridging with sync code</a></li>
+<li><a href="https://m4n5ter.github.io/rust/tokio/graceful_shutdown.html">Graceful Shutdown</a></li>
+<li><a href="https://m4n5ter.github.io/rust/tokio/getting_started_with_tracing.html">Getting started with Tracing</a></li>
+<li><a href="https://m4n5ter.github.io/rust/tokio/next_steps_with_tracing.html">Next steps with Tracing</a></li>
 </ul>
 
                     <div id="giscus-container"></div>
